--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Story template</title>
+    <title>Berlin vs Brooklyn</title>
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -113,11 +113,11 @@
 <body>
     <div class="content">
         <div class="header">
-            <h1>This is the headline of the story you are about to read</h1>
-            <p class="subhead">Here is the subhead or additional content you want to add in</p>
+            <h1>This is some stuff I did with weather data</h1>
+            <p class="subhead">Which city has the better weather? Berlin or Brooklyn</p>
         </div>
         <div class="byline">
-            <p>By <a href="https://jonathansoma.com">Jonathan Soma</a></p>
+            <p>By <a href="https://helenawittlich.com">Helena Wittlich</a></p>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
