--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
  
     </div>
-        <div class="iframe-row full-width">
+        <div class="iframe-row full-width-iframe">
         <iframe title="Berlin Chart" src="https://datawrapper.dwcdn.net/qkfVL/" scrolling="no" frameborder="0"
                  style="border: none;" data-external="1"></iframe>
 
@@ -208,6 +208,17 @@
 
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium...</p>
 
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+            dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
+
+        <iframe title="" aria-label="Bar Chart" id="datawrapper-chart-IK03Y"
+            src="https://datawrapper.dwcdn.net/IK03Y/" scrolling="no" frameborder="0"
+            style="width: 0; min-width: 100% !important; border: none;" data-external="1"></iframe>
+
+        
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
