update in project

--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@
         <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
         </script>
 
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</p>
+                <p>When I moved from Berlin to Brooklyn, my friends told me to look forward to the beatiful weather here. 
+                Berlin is rarely sunnz, they said. You will love it here. So far, I am not convinced. Are Brooklyn spring days this grey every year? And is Berlin weather really as bad as its reputation?
+                And what is going on with all the rain on weekends? Let`s find out – how is the weather right now?
+                </p>
 
 
         <figure>
