--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <script async src="//www.instagram.com/embed.js"></script>
                 
                 <p></p>
-                And is Berlin weather really as bad as its reputation? Let`s find out – how is the weather right now?
+                Is Berlin weather really as bad as its reputation? Let`s find out.
                 </p>
    <iframe title="" aria-label="Bar Chart" id="datawrapper-chart-syJMq"
             src="https://datawrapper.dwcdn.net/syJMq/" scrolling="no" frameborder="0"
