--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
             style="width: 0; min-width: 100% !important; border: none;" data-external="1"></iframe>
         <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
         </script>
-        <p>To really settle this, we need to look deeper. To answer this, let's look at sunshine hours from the last year. To define a sunny day, I followed the definition used by the German Weather Service (DWD). A sunny day is a day with at least 80 percent sunshine. </p>
+        <p>To really settle this, we need to look deeper. To answer this, let's look at sunshine hours from the last year. </p>
+        <p>To define a sunny day, I followed the definition used by the German Weather Service (DWD). A sunny day is a day with at least 80 percent sunshine. </p>
 
 
         <figure>
