--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             font-size: 20px;
             font-family: Georgia, 'Times New Roman', Times, serif;
             text-rendering: optimizeLegibility;
+            background: linear-gradient(to bottom,#eaf6fb 0%, #fffce8  100%);
         }
 
         .content {
@@ -104,6 +105,15 @@
             margin-left: calc(-40vw + 50%);
             margin-right: calc(-40vw + 50%);
         }
+
+        .methodology-box {
+            background: #f4f4f4;
+            padding: 1em;
+            font-size: 0.9em;
+            border-left: 4px solid #ccc;
+            margin: 1em 0;
+        }
+
 
         /* Desktop styles (default) */
         .iframe-row {
@@ -230,3 +240,7 @@
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
             dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
+            <div class="methodology-box">
+         <strong>Methodology:</strong> Data is based on the definition by the German Weather Service...
+          </div>
