--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 <body>
     <div class="content">
     <div class="header">
-    <img src="images/Frame 458.svg" alt="Skyline of Brooklyn and Berlin" class="header-image">
+    <img src="images/header.svg" alt="Skyline of Brooklyn and Berlin" class="header-image">
 
         <div class="header">
             <h1>From Berlin to Brooklyn: Chasing the Sun</h1>
