--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
         .subhead {
             font-family: 'Lora', Georgia, serif;
+
         }
 
         iframe,
@@ -186,7 +187,7 @@
 
         <div class="header">
             <h1>From Berlin to Brooklyn: Chasing the Sun</h1>
-            <p class="subhead">I left Berlin expecting bluer skies in Brooklyn. But after a gloomy spring and a lot of rain, it felt like Berlin had the better weather. The data tells a more complicated story — one about sunshine, sweat, and two cities heavily effected by climate change.</p>
+            <p class="subhead">What two cities — and a lot of rain — taught me about weather, comfort, and climate change.</p>
         </div>
         <div class="byline">
             <p>By <a href="https://helenawittlich.com">Helena Wittlich</a></p>
@@ -209,7 +210,7 @@
         <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
         </script>
         <p>To really settle this, we need to look deeper. Let’s start with sunshine hours from the past year.</p>
-        <p>To define a sunny day, I followed the definition used by the German Weather Service (DWD): a sunny day is a day with at least 80 percent sunshine.</p>
+        <p>To define a sunny day, I followed the definition used by the <a href='https://www.dwd.de/DE/Home/home_node.html;jsessionid=86BF05D25D6DE15C82A6691CC52512C7.live11043'>German Weather Service (DWD)</a>: a sunny day is a day with at least 80 percent sunshine.</p>
 
 
         <figure>
