--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             font-weight: bold;
             font-size: 2.5em;
             line-height: 1.1;
+            text-align: center;
         }
 
         h2 {
@@ -78,6 +79,7 @@
 
         .subhead {
             font-family: 'Lora', Georgia, serif;
+            text-align: center;
 
         }
 
