--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@
         .subhead {
             font-family: 'Lora', Georgia, serif;
             text-align: center;
-
+            padding: 0 0 10px ;
         }
+
+        .byline {
+        font-size: 0.8em;
+        text-align: center;
+        font-family: 'Roboto', Georgia, serif;
+        }
+
 
         iframe,
         img,
