--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         </div>
         <div class="byline">
             <p>By <a href="https://helenawittlich.com">Helena Wittlich</a></p>
+            <p>Brooklyn, June 29th 2025</p>
         </div>
 
                 <p>When I moved from Berlin to Brooklyn, my friends told me to look forward to the beautiful weather here. Berlin is rarely sunny, they said. You will love it there. So far, I’m not convinced. I mean ...
