--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
 
         .iframe-row iframe {
             width: 50%;
-            /*min-width: 0;
             flex: 1;
         }
 
@@ -295,3 +294,4 @@
         <p>All analysis was done in Python using Pandas and Matplotlib. You can view the full code and data in the <a href='https://github.com/helenawittlich/berlin-brooklyn-weather'>GitHub repository</a>.</p>
 
     </div>
+</body>
