--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         <figure>
             <img
-                src="images/sunny-days.png">
+                src="images/sunny-days.svg">
             <figcaption></figcaption>
         </figure>
 
