--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
 
         <p>But if we look at just the past three months, it’s hard to say if Brooklyn’s weather was really that bad — or if Berlin’s was just unusually good. A ten-year comparison makes things a bit clearer.</p>
 
-
+        <p>The sun ratio - the duration of sunshine per day divided by the possible hours of daylight could be an indicator for this. This also factors in, that Berlin has longer days in summer and much shorter days in winter.</p>
+        <p>In fact, Berlin in winter feels like there is no sun at all, while Brooklyn winters seemed sunnier. Let's take a look at average sun ratio per month and compare both cities</p>
+        
         <iframe title="" aria-label="Line Chart" id="datawrapper-chart-4WGVP"
             src="https://datawrapper.dwcdn.net/4WGVP/" scrolling="no" frameborder="0"
             style="width: 0; min-width: 100% !important; border: none;" data-external="1"></iframe>
@@ -249,7 +251,7 @@
   
         <p>A hot summer day in Brooklyn feels so much hotter than in Berlin. The only explanation: humidity. High humidity prevents sweat from evaporating, making it feel hotter than it is.</p>
 
-        <p>If we look at humidity in relation to the “feels like” temperature, it shows just how humid Brooklyn is year-round — and how that makes summer especially uncomfortable.</p>
+        <p>If we look at humidity in relation to the “feels like” temperature, it shows just how humid Brooklyn is year-round — and how that makes summer especially uncomfortable. In Berlin, summers have more of a dry heat and therefore, feel more pleasant. </p>
  
         </div>
             <div class="iframe-row full-width-iframe">
