--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
         <p>But if we look at just the past three months, it’s hard to say if Brooklyn’s weather was really that bad — or if Berlin’s was just unusually good. A ten-year comparison makes things a bit clearer.</p>
 
         <p>The sun ratio - the duration of sunshine per day divided by the possible hours of daylight could be an indicator for this. This also factors in, that Berlin has longer days in summer and much shorter days in winter.</p>
-        <p>In fact, Berlin in winter feels like there is no sun at all, while Brooklyn winters seemed sunnier. Let's take a look at average sun ratio per month and compare both cities</p>
-        
+        <p>In fact, Berlin in winter feels like there is no sun at all, while Brooklyn winters seemed sunnier. Is this true? Let's take a look at average sun ratio per month.</p>
+
         <iframe title="" aria-label="Line Chart" id="datawrapper-chart-4WGVP"
             src="https://datawrapper.dwcdn.net/4WGVP/" scrolling="no" frameborder="0"
             style="width: 0; min-width: 100% !important; border: none;" data-external="1"></iframe>
@@ -246,6 +246,8 @@
         </script>
 
         <p>Berlin winters felt like the darkest times — and this chart proves it: in December, there is sometimes not more than 20 percent sunshine per day on average.</p>
+
+        <p>On the same hand, this spring, Brooklyn's sun ratio was down compared to the previous years. Thus, the impression of rainy weekend's was not so off after all. </p>
 
         <h2>But what about the humidity?</h2>
   
